[project]
name = "tentaclio"
version = "1.3.7"
description = "Unification of data connectors for distributed data tasks"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Octopus Energy", email = "nerds@octoenergy.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    # Security constraints
    "urllib3>=1.24.2",
    # HTTP
    "requests",
    # SQLAlchemy
    "sqlalchemy>=1.4",
    # SFTP
    "paramiko<4.0.0",
    # Utils
    "pandas",
    "click",
    "pyyaml",
    "importlib_metadata>3.7.0",
]

[project.optional-dependencies]
s3 = ["tentaclio_s3"]
athena = ["tentaclio_athena"]
postgres = ["tentaclio_postgres"]
databricks = ["tentaclio_databricks>=1.0.0"]
gdrive = ["tentaclio_gdrive"]
gs = ["tentaclio_gs"]
snowflake = ["tentaclio_snowflake"]

[project.urls]
Homepage = "https://github.com/octoenergy/tentaclio"
Repository = "https://github.com/octoenergy/tentaclio"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "tentaclio",
    "black",
    "isort",
    "flake8",
    "mypy",
    "pydocstyle",
    "types-paramiko~=3.3.0.0",
    "types-pyyaml",
    "types-requests",
    "moto~=4.0.0",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "twine",
    "secretstorage",
    "pkginfo",
    "click",
    "paramiko<4.0.0",
]
docs = [
    "sphinx~=4.5.0",
    "myst-parser~=0.17.0",
    "sphinx-rtd-theme",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tentaclio*"]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
tentaclio = { path = ".", editable = true }
