[project]
name = "tentaclio"
version = "1.4.1"
description = "Unification of data connectors for distributed data tasks"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Octopus Energy", email = "nerds@octoenergy.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    # Security constraints
    "urllib3>=1.24.2",
    # HTTP
    "requests",
    # SQLAlchemy
    "sqlalchemy>=1.4",
    # SFTP
    "paramiko>=3.4.0,<4.0.0",
    # Utils
    "pandas",
    "click",
    "pyyaml",
    "importlib_metadata>3.7.0",
]

[project.optional-dependencies]
s3 = ["tentaclio_s3"]
athena = ["tentaclio_athena"]
postgres = ["tentaclio_postgres"]
databricks = ["tentaclio_databricks>=1.0.0"]
gdrive = ["tentaclio_gdrive"]
gs = ["tentaclio_gs"]
snowflake = ["tentaclio_snowflake"]

[project.urls]
Homepage = "https://github.com/octoenergy/tentaclio"
Repository = "https://github.com/octoenergy/tentaclio"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "tentaclio",
    "black",
    "isort",
    "flake8",
    "Flake8-pyproject",
    "mypy",
    "pydocstyle",
    "types-paramiko~=3.3.0.0",
    "types-pyyaml",
    "types-requests",
    "moto~=4.0.0",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "twine",
    "secretstorage",
    "pkginfo",
    "click",
    "paramiko<4.0.0",
]
docs = [
    "sphinx~=4.5.0",
    "myst-parser~=0.17.0",
    "sphinx-rtd-theme",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tentaclio*"]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.uv.sources]
tentaclio = { path = ".", editable = true }

# Tool configurations

[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "Test"
python_functions = "test_*"
filterwarnings = ["error::RuntimeWarning"]
addopts = "--cov=./src/tentaclio/ --cov-report xml --cov-report term"

[tool.mypy]
incremental = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.isort]
line_length = 99
multi_line_output = 3
lines_after_imports = 2
default_section = "THIRDPARTY"
known_first_party = ["tentaclio"]
sections = ["STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.flake8]
exclude = ["logs", ".*/*.py", "*.egg-info"]
max-line-length = 99
max-complexity = 10
ignore = ["F405", "W391", "W503"]

[tool.black]
line-length = 99

[tool.coverage.run]
source = ["src/tentaclio"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
